<resources>
    <string name="app_name">Lokal Assignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brand">Brand</string>
    <string name="title">Sample Title of the product</string>
    <string name="price">$%d</string>
    <string name="discount">(%.2f%% off)</string>
    <string name="description">This is a sample description denoting description of the product</string>
    <string name="stock">Hurry only %d left</string>
</resources>